<resources>
    <string name="app_name">Smartbill</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="goback">go back to login page</string>
    <string name="title_activity_user">Smart Bill</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="forgot_password">forgot password?</string>
    <string name="submit">Submit</string>
    <string name="enter_the_email_id">Enter the email id</string>
    <string name="we_just_need_your_registered_email_id">we just need your registered email id</string>

    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_meter_id">Meter Id</string>

    <string name="lbl_bill_amount">Bill Amount</string>
    <string name="lbl_unit_consumed">Unit Consumed</string>
    <string name="lbl_previous_reading">Previous Reading</string>
    <string name="lbl_bill_due_date">Bill Due Date</string>

    <string name="txt_bill_reading_details">Bill Reading Details</string>
    <string name="txt_bill_amount_details">Bill Amount Details</string>

    <string name="lbl_last_bill_reading">Last Bill Reading</string>
    <string name="lbl_current_reading">Current Reading</string>
    <string name="lbl_consumption">Consumption</string>

    <string name="lbl_fetching_details">Fetching details…</string>

    <string name="txt_menu_communicate">Communicate</string>
    <string name="txt_menu_home">Home</string>
    <string name="txt_menu_usage">Usage</string>
    <string name="txt_menu_user_details">User details</string>
    <string name="txt_menu_bill">Check Bill</string>
    <string name="txt_menu_help">Help</string>
    <string name="txt_menu_aboutus">About us</string>
    <string name="txt_menu_logout">Logout</string>

    <string name="txt_date">Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
