<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/txt_menu_home" />
        <item
            android:id="@+id/nav_usage"
            android:icon="@drawable/ic_menu_usage"
            android:title="@string/txt_menu_usage" />
        <item
            android:id="@+id/nav_user_details"
            android:icon="@drawable/ic_menu_user_details"
            android:title="@string/txt_menu_user_details" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_menu_bill"
            android:title="@string/txt_menu_bill" />
    </group>

    <item android:title="@string/txt_menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/txt_menu_help" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_menu_aboutus"
                android:title="@string/txt_menu_aboutus" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/txt_menu_logout" />
        </menu>
    </item>

</menu>
